# WrightTools

./: .gitignore  .pep8speaks.yml  .pre-commit-config.yaml  .readthedocs.yml  .rtd-environment.yml  .travis.yml  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTORS  LICENSE  MANIFEST.in  README.md  README.rst  __init__.py  appveyor.yml  artists.py  calibration.py  client_secrets.json  data.py  database.bib  environment-dev.yml  fit.py  google_drive.py  gui.py  kit.py  main.ini  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  units.py
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE  PULL_REQUEST_TEMPLATE.md
.github/workflows/: codeql-analysis.yml  python-mypy.yml  python-publish.yml  python-test.yml
WrightTools/: .pre-commit-config.yaml  CHANGELOG.md  CITATION  README.rst  __citation__.py  __init__.py  __main__.py  __version__.py  __wt5_version__.py  _base.py  _close.py  _dataset.py  _group.py  _open.py  artists.py  calibration.py  data.py  exceptions.py  fit.py  google_drive.py  kit.py  macros.py  open.py  setup.cfg  setup.py  units.py
WrightTools/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE
WrightTools/WrightTools/: __init__.py  __main__.py  _close.py  _group.py  (+1 more)
broken_examples/: absorbance.py  diff2D.py  quick1D.py  simple_2D.py
diagrams/: WMEL.py  __init__.py  delay.py
docs/: .gitignore  Makefile  alternatives.rst  artists.rst  citation.rst  cli.rst  collection.rst  conf.py  contributing.rst  data.rst  datasets.rst  diagrams.rst  fit.rst  index.rst  install.rst  kit.rst  make.bat  publications.rst  quickstart.rst  requirements.txt  tuning.rst  units.rst  write_from_function.rst  write_from_method.rst  wt5.rst
documentation/: .gitignore  container.tex  database.bib  documentation.tex  figures.py
example_data/: abs scan.txt
examples/: DOVE_transform.py  Fit_single_D2_Gaussian.py  README.txt  WMEL_examples.py  absorbance.py  batch_4_comparison.py  colormaps.py  custom_fig.py  fill_types.py  filters.py  fringes_transform.py  gradient.py  heal.py  join.py  label_delay_space.py  level.py  lineshapes.py  map-variable.py  moment_sideplot.py  myexample.py  norms.py  plot_colormap_components.py  quick1D.py  quick2D.py  quick2D_signed.py  rRaman.py  simple_1D.py  sin.py  split.py  tune_test.py  wmels_sfg_to_dfg_cascade.py  wmels_trive_off_diagonal.py  wmels_trive_on_diagonal.py  wmels_trive_population_transfer.py  wt for np users.ipynb
logo/: logo.py  peak.h5
paper/: .gitignore  build.sh  paper.bib  paper.md
scripts/: checklists.org  environment-dev.yml  environment-test.yml  environment.yml  headers.sh  upload.sh
shots_processing/: Power_Norm_experiment.py  __init__.py  dual_chopping.py  dual_chopping_ps.py  mean_and_std.py  mean_and_variance.py  no_chopping.py  pyro1_norm.py  pyro2_norm.py  pyro3_norm.py  shot_norm.py  shot_norm_photon_count.py  simple_w2_chopped.py  w1_chopped.py  w2_chopped.py
testing_scripts/: interpolation.py
tests/: base.py  citation.py  import.py  units.py  wt_tree.py
tuning/: TOPAS_C.py  __init__.py  coset.py  curve.py  opa800.py  opa_800.py  spectral_delay_correction.py  topas_tune.py  workup.py
widgets/: __init__.py  style.py  widgets.py
(+1006 files in other folders)
