[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "WrightTools"
authors =[{name="WrightTools Developers"}]
description="Tools for loading, processing, and plotting multidimensional spectroscopy data."
readme = "README.rst"
requires-python = ">=3.7"
dynamic = ["version"]
dependencies = [
    "h5py",
    "imageio>=2.28.0",
    "matplotlib>=3.4.0",
    "numexpr",
    "numpy>=1.15.0",
    "pint",
    "python-dateutil",
    "scipy",
    "click",
    "tidy_headers>=1.0.4",
    "rich",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Framework :: Matplotlib",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
keywords = ["spectroscopy", "science", "multidimensional", "visualization"]
license="MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
docs = [
    "sphinx<8.0",
    "sphinx-gallery==0.8.2",
    "sphinx-rtd-theme"
]
dev = [
    "black",
    "pre-commit",
    "pydocstyle",
    "pytest",
    "pytest-cov",
    "databroker<2",
    "msgpack",
    "sphinx<8.0",
    "sphinx-gallery==0.8.2",
    "sphinx-rtd-theme"
]

[project.urls]
Homepage = "https://github.com/wright-group/WrightTools"
Documentation = "https://wright.tools"
Repository = "https://github.com/wright-group/WrightTools.git"
Issues = "https://github.com/wright-group/WrightTools/issues"
Changelog = "https://github.com/wright-group/WrightTools/blob/master/CHANGELOG.md"

[project.scripts]
wt5 = "WrightTools.cli._wt5:cli"
wt-convert = "WrightTools.cli._units:cli"

[tool.setuptools.dynamic]
version = {file = "WrightTools/VERSION"}
