[aliases]
test=pytest

[bdist_wheel]
universal=1

[flake8]
max-line-length = 99
exclude =
    .git,
    __pycache__,
    data,
    temp
count = True
ignore = D105

[pydocstyle]
convention = numpy
add-ignore = D105

[metadata]
description-file = README.rst

[tool:pytest]
addopts = --verbose
python_files = tests/*.py
